--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-	Hello World!
-</body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Diversanto inc.</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	</head>
+	<body>
+		<div class="container">
+			<h1 class=title>Diversanto</h1>
+			<h2>My projects</h2>
+			<a href="https://github.com/DiversenSato?tab=repositories">
+				<button>Github repositories</button>
+			</a>
+		</div>
+	</body>
+<html>
